--- a/index.html
+++ b/index.html
@@ -4,20 +4,29 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
 	
 	<title>Frontend Mentor | QR code component</title>
-	<link rel="stylesheet" href="./assests/css/index.css">
+	<link rel="stylesheet" href="./assets/css/index.css">
 </head>
 <body>
+	<main>
+		<section class="card" aria-labelledby="card-title">
+			<img src="./assets/images/image-qr-code.png" alt="QR code linking to Frontend Mentor">
 
-	Improve your front-end skills by building projects
+			<article class="card-text">
+				<h1 id="card-title" class="card-title">Improve your front-end skills by building projects</h1>
 
-	Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+				<p class="card-desc">
+					Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+				</p>
+			</article>
+		</section>
+	</main>
 	
-	<div class="attribution">
+	<footer class="attribution">
 		Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-		Coded by <a href="#">Your Name Here</a>.
-	</div>
+		Coded by <a href="https://github.com/HilmiSalsabilla">Hilmi Salsabilla</a>.
+	</footer>
 </body>
 </html>
